# rust-wasm-particles

./: .gitignore  Cargo.toml  README.md  build.bat  buildnserve.bat  check.bat
src/: color.rs  gravity_well.rs  lib.rs  particle.rs  renderer.rs  shader.rs  webgl_helpers.rs
www/: index.html  index.js  package.json  webpack.config.js
www/src/: framerate_display.js  index.js
