[package]
name = "rust-graphics"
version = "0.1.0"
authors = ["Austin Clements <austinclementsbass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.67"
js-sys = "0.3.45"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
libc = "0.2.76"
cgmath = "0.17.0"
vecmath = "1.0.0"
nalgebra-glm = "0.8.0"

[dependencies.web-sys]
version = "0.3.44"
features = [
    'CanvasRenderingContext2d',
    'console',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'WebGlBuffer',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'Window',
]

[dependencies.rand]
version = "0.7"
features = [
    "wasm-bindgen",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.17"

[profile.release]
opt-level = "s"
debug = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-mutable-globals"]